# ssccs-nexus

./: .gitignore  Dockerfile  Makefile  README.md  deploy-afworker.sh  edgequake.code-workspace  mobile-snapshot.md  quickstart.sh  run-rag.sh  update-rag.sh
.devcontainer/: devcontainer.json
edgequake/crates/edgequake-pdf/: Cargo.toml
edgequake/crates/edgequake-pdf/src/: lib.rs
edgequake/crates/edgequake-pdf/src/backend/: edgeparse.rs
rag/edgequake/edgequake/crates/edgequake-api/: Cargo.toml
rag/edgequake/edgequake/crates/edgequake-api/src/: provider_types.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/: admin.rs  chat_types.rs  graph_types.rs  health_types.rs  injection.rs  mod.rs  models.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/conversations/: bulk.rs  crud.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/documents/: mod.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/documents/delete/: bulk.rs  single.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/documents/query/: detail.rs  list.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/documents/recovery/: reprocess.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/documents/upload/: file_upload.rs  text_upload.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/documents_types/: detail.rs  listing.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/graph/: graph_stream.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/lineage/: mod.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/ollama/: chat.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/pdf_upload/: mod.rs  operations.rs  upload.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/query/: mod.rs  query_execute.rs  query_stream.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/workspaces/: helpers.rs  mod.rs  tenants.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/workspaces/bulk_ops/: mod.rs
rag/edgequake/edgequake/crates/edgequake-api/src/handlers/workspaces_types/: mod.rs
rag/edgequake/edgequake/crates/edgequake-api/src/processor/: mod.rs  pdf_processing.rs  pipeline_checkpoint.rs
rag/edgequake/edgequake/crates/edgequake-api/src/state/: memory.rs  postgres.rs  provider_setup.rs
rag/edgequake/edgequake/crates/edgequake-api/tests/: e2e_api_comprehensive.rs  e2e_auth.rs  e2e_chat_workspace_provider.rs  e2e_costs.rs  e2e_data_model.rs  e2e_document_deletion_postgres.rs  e2e_document_lineage.rs  e2e_document_processing_pipeline.rs  e2e_document_workspace_provider.rs  e2e_edge_cases.rs  e2e_embedding_provider_workspace.rs  e2e_file_upload.rs  e2e_injection.rs  e2e_metrics_history.rs  e2e_pipeline_resume.rs  e2e_pipeline_robustness.rs  e2e_postgres_rls.rs  e2e_postgres_workspace.rs  e2e_provider_integration.rs  e2e_provider_switching.rs  e2e_provider_tracking_stats.rs  e2e_query_http_workspace.rs  e2e_query_workspace_provider.rs  e2e_rebuild_lineage.rs  e2e_reindexing.rs  e2e_relationships.rs  e2e_timeout_config.rs  e2e_upload_performance.rs  e2e_vector_storage_dimension.rs  e2e_workspace_pipeline_integration.rs  graph_optimization_tests.rs
(+869 files in other folders)
